--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-ws": "^11.1.9",
     "@nestjs/terminus": "^11.0.0",
+    "@nestjs/websockets": "^11.1.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "reflect-metadata": "^0.2.2",
